2.5/3 of the way there, the controller is fixed and it is internally dectecting what the correct apoggee is but now I need to figure out why its not driving the simulation